Fix docs on mobile

--- a/docs/assets/scss/_generic.scss
+++ b/docs/assets/scss/_generic.scss
@@ -8,3 +8,8 @@ html.is-clipped-touch {
         overflow: hidden !important;
     }
 }
+
+.media-content {
+    overflow-y: hidden;
+    overflow-x: auto;
+}
